[package]
name = "actix-cbor"
version = "0.1.5"
authors = ["noah <noah.kennedy.professional@gmail.com>"]
edition = "2018"
description = "CBOR support for Actix-Web"
readme = "README.md"
repository = "https://github.com/Noah-Kennedy/actix-cbor"
license = "MIT OR Apache-2.0"
keywords = ["serde", "actix", "cbor", "web", "async"]
categories = ["encoding", "web-programming", "compression", "asynchronous"]
exclude = ["CHANGELOG.md"]
publish = false

[features]
compress = ["actix-web/__compress"]

[dependencies]
log = "0.4.17"
futures-util = "0.3.21"
serde_cbor = "0.11.2"
serde = "1.0.137"
actix-http = "3.0.4"

[dependencies.actix-web]
version = "4.0.1"
default-features = false

[dev-dependencies]
actix-rt = "2.7.0"

[dev-dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dev-dependencies.actix-web]
version = "4.0.1"
features = ["macros"]
